# YAPP

./: README.MD  pyproject.toml
YAPP.egg-info/: PKG-INFO  SOURCES.txt
src/YAPP/: YAPP.py  __init__.py  models.py  status_level.py  status_level.pyi
src/yapp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
